First stub of a working starter kit - lacks documentation (funny uh?)

--- a/config.js.dist
+++ b/config.js.dist
@@ -4,13 +4,13 @@
 var config = {
 
   // Your site title (format: page_title - site_title)
-  site_title: 'Locke',
+  site_title: '@SITE_TITLE@',
 
   // The base URL of your site (can use %base_url% in Markdown files)
   base_url: '',
 
   // Used for the "Get in touch" page footer link
-  support_email: '',
+  support_email: '@EMAIL@',
 
   // Footer Text / Copyright
   copyright: 'Copyright &copy; '+ new Date().getFullYear() +' - <a href="http://raneto.com">Powered by Raneto</a>',
